# agentic-airflow-demo

./: .env.example  .gitignore  README.md
agent/: .dockerignore  Dockerfile  agent.py  pyproject.toml  requirements.txt
agent/aws_agentcore/: Dockerfile  agent.py  requirements.txt
agent/azure_ai_agents/: Dockerfile  __init__.py  agent.py  requirements.txt
agent/azure_functions/: function_app.py
agent/azure_functions/shared/: local_runtime.py  troubleshooting.py
agent/azure_functions/shared/tools/: github_api.py
agent/gcp_gemini_agent_platform/: Dockerfile  agent.py
agent/prompts/: system_prompt.md
agent/shared/: local_runtime.py  troubleshooting.py
agent/shared/tools/: airflow_api.py  github_api.py  slack.py
agent/tests/: test_agent_local.py  test_tools.py
agent/tools/: __init__.py  airflow_api.py  github_api.py  slack.py  strands_compat.py
airflow/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
airflow/dags/: _agentcore_setup.py  _failure_context.py  demo_failing_etl.py  demo_missing_config_etl.py  demo_schema_contract_etl.py  demo_sql_schema_etl.py  smoke_dummy.py
airflow/dags/aws_agentcore/: _failure_context.py  demo_failing_etl.py  demo_missing_config_etl.py  demo_schema_contract_etl.py  demo_sql_schema_etl.py  setup.py
airflow/dags/azure_ai_agents/: __init__.py  demo_failing_etl.py  demo_missing_config_etl.py  demo_schema_contract_etl.py  setup.py  (+1 more)
docs/: deviations.md
infra/iam/: agentcore_execution_policy.json  agentcore_trust_policy.json
scripts/: deploy_agent.sh  deploy_azure_agent.sh  deploy_gcp_agent.sh
(+6 files in other folders)
