[project]
name = "agentic-airflow-agent"
version = "0.1.0"
description = "AgentCore runtime for troubleshooting failed Airflow DAG tasks."
requires-python = ">=3.11"
dependencies = [
  "bedrock-agentcore>=0.1.0",
  "strands-agents>=0.1.0",
  "requests>=2.31.0",
  "boto3>=1.34.0",
  "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
